--- a/Tufao.pluginspec.in
+++ b/Tufao.pluginspec.in
@@ -1,4 +1,4 @@
-<plugin name=\"Tufao\" version=\"0.2.1\" compatVersion=\"0.2.1\">
+<plugin name=\"Tufao\" version=\"0.2.2\" compatVersion=\"0.2.2\">
     <vendor>TufaoTeam</vendor>
     <copyright>(C) 2012, 2013 Vinícius dos Santos Oliveira</copyright>
     <license>                   GNU LESSER GENERAL PUBLIC LICENSE
@@ -166,8 +166,8 @@ whether future versions of the GNU Lesser General Public License shall
 apply, that proxy\'s public statement of acceptance of any version is
 permanent authorization for you to choose that version for the
 Library.</license>
-    <description>A helper plugin to work with Tufão framework.</description>
-    <url>https://github.com/vinipsmaker/tufao</url>
+    <description>a plugin for QtCreator IDE to easily create new Tufão projects</description>
+    <url>https://github.com/vinipsmaker/tufao-qtcreatorplugin</url>
     <dependencyList>
         <dependency name=\"ProjectExplorer\" version=\"$$QTCREATOR_VERSION\"/>
     </dependencyList>
